MODON MRE BPDEV/force-app/main/default/objects/Signzy_Journey__mdt/Signzy_Journey__mdt.object-meta.xml
<CustomObject>
    <label>Signzy Journey</label>
    <pluralLabel>Signzy Journey</pluralLabel>
</CustomObject>