MODON MRE BPDEV/force-app/main/default/objects/Signzy_Journey__mdt/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>