MODON MRE BPDEV/force-app/main/default/objects/Signzy_Journey__mdt/fields/Defaul_Document__c.field-meta.xml
<CustomField>
    <fullName>Defaul_Document__c</fullName>
    <label>Defaul Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>