MODON MRE BPDEV/force-app/main/default/objects/Signzy_Journey__mdt/fields/Default_Journey__c.field-meta.xml
<CustomField>
    <fullName>Default_Journey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Journey</label>
    <type>Checkbox</type>
</CustomField>