MODON MRE BPDEV/force-app/main/default/objects/Signzy_Journey__mdt/fields/Expiry_Validity_in_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Validity_in_Seconds__c</fullName>
    <label>Expiry Validity in Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>