MODON MRE BPDEV/force-app/main/default/objects/Signzy_Journey__mdt/fields/Journey_Type__c.field-meta.xml
<CustomField>
    <fullName>Journey_Type__c</fullName>
    <defaultValue>&apos;Standard&apos;</defaultValue>
    <label>Journey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>