MODON MRE BPDEV/force-app/main/default/objects/Signzy_Journey__mdt/fields/Multi_Document_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Multi_Document_Authentication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi Document Authentication</label>
    <type>Checkbox</type>
</CustomField>