MODON MRE BPDEV/force-app/main/default/objects/Signzy_Journey__mdt/fields/Secondary_Document__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Document__c</fullName>
    <label>Secondary Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>