MODON MRE BPDEV/force-app/main/default/objects/Signzy_Journey__mdt/fields/Session_Expiry_Validity__c.field-meta.xml
<CustomField>
    <fullName>Session_Expiry_Validity__c</fullName>
    <label>Session Expiry Validity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>