MODON MRE BPDEV/force-app/main/default/objects/Signzy_Journey__mdt/fields/Signzy_Flow_ID__c.field-meta.xml
<CustomField>
    <fullName>Signzy_Flow_ID__c</fullName>
    <label>Signzy Flow ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>